--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "axios": "^1.8.3",
     "pinia": "^3.0.1",
+    "vant": "^4.9.17",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
   },
@@ -20,15 +22,20 @@
     "@commitlint/cli": "^19.8.0",
     "@commitlint/config-conventional": "^19.8.0",
     "@eslint/js": "^9.21.0",
+    "@vant/auto-import-resolver": "^1.3.0",
     "@vitejs/plugin-vue": "^5.2.1",
     "@vitejs/plugin-vue-jsx": "^4.1.1",
     "@vue/eslint-config-prettier": "^10.2.0",
     "eslint": "^9.21.0",
     "eslint-plugin-vue": "~10.0.0",
+    "fast-glob": "^3.3.3",
     "globals": "^16.0.0",
     "husky": "^9.1.7",
     "prettier": "3.5.3",
+    "unplugin-auto-import": "^19.1.1",
+    "unplugin-vue-components": "^28.4.1",
     "vite": "^6.2.1",
+    "vite-plugin-svg-icons": "^2.0.1",
     "vite-plugin-vue-devtools": "^7.7.2"
   }
 }
