--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "@vueuse/core": "^13.0.0",
     "axios": "^1.8.3",
     "pinia": "^3.0.1",
     "vant": "^4.9.17",
     "vue": "^3.5.13",
+    "vue-i18n": "^11.1.2",
     "vue-router": "^4.5.0"
   },
   "devDependencies": {
