--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "globals": "^16.0.0",
     "husky": "^9.1.7",
     "prettier": "3.5.3",
+    "sass-embedded": "^1.85.1",
     "unplugin-auto-import": "^19.1.1",
     "unplugin-vue-components": "^28.4.1",
     "vite": "^6.2.1",
